# penguin_tests

./: .gitignore  README.md  allurerc.json  allurerc.yaml  pyproject.toml  report.html
src/penguin_tests/: failure.py  main.py
tests/: test_failures.py  test_main.py
