[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penguin-tests"
version = "0.1.0"
description = "A basic Python project setup."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest==9.0.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
