[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penguin_tests"
version = "0.1.0"
description = "A basic Python project setup."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-html",
    "pytest-csv",
    "allure-pytest==2.16.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration", "unit", "full"]
# addopts = "-ra"
